<resources>
    <string name="app_name">TotoCafeAndroid</string>
    <string name="facebook_app_id">1659743474274718</string>
    <string name="login">Login</string>
    <string name="name">Name :</string>
    <string name="surname">Surname :</string>
    <string name="birthDate">Birth Date :</string>
    <string name="email">Email :</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>

    <string name="gender">Gender :</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="user_details">User Details</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="create_user_account">Create User Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>


    <string name="barcode">Barcode Scanning...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_deneme">Deneme</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qr_code_reader">QrCodeReaderActivity</string>
</resources>
