<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/btn_FacebookLogin"
        android:layout_toStartOf="@+id/btn_FacebookLogin" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/et_email"
        android:layout_toLeftOf="@+id/textView1"
        android:layout_toStartOf="@+id/textView1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facebook Login"
        android:id="@+id/btn_FacebookLogin"
        android:layout_below="@+id/btn_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Register"
        android:id="@+id/btn_Register"
        android:layout_alignTop="@+id/btn_Login"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anonymous Login"
        android:id="@+id/btn_Anonymous"
        android:layout_below="@+id/btn_FacebookLogin"
        android:layout_alignLeft="@+id/btn_FacebookLogin"
        android:layout_alignStart="@+id/btn_FacebookLogin"
        android:layout_marginTop="51dp" />


</RelativeLayout>